# llm-d-planner

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GITHUB_DEPLOYMENT.md  LICENSE  Makefile  OWNERS  QUICK_DEPLOY.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-demo.yml
accuracy/: README.md  accuracy_report.md  blog-gpu-capacity.md
accuracy/k8s/: configmap-scripts.yaml  configmap-sweep-versions.yaml  configmap-sweep.yaml  hf-secret.yaml  namespace.yaml  orchestrator-job-versions.yaml  orchestrator-job.yaml  pvc.yaml  rbac.yaml  vllm-job-reference.yaml
accuracy/results/v0.19.0/: accuracy_report.md
accuracy/scripts/: analyze.py  collect.py  parse_log.py  parse_logs.py  predict_capacity.py  sweep-new-models-2026-04.yaml  sweep-versions.yaml  sweep.yaml  sweep_runner.py
accuracy/tests/: test_analyze.py  test_collect.py  test_parse_log.py  test_sweep_runner.py
accuracy/tests/fixtures/: llama_tp1_expected.json
config/: kind-cluster.yaml
config_explorer/: README.md
data/archive/: ACCURACY_MAPPING_README.md  all_usecases_config.json
deploy/kubernetes/: backend.yaml  configmap.yaml  db-init-job.yaml  deploy-all.sh  gpu-reader-rbac.yaml  namespace.yaml  networkpolicy-model-catalog.yaml  ollama.yaml  postgres.yaml  route.yaml  secrets.yaml  service-ca-configmap.yaml  ui.yaml
docs/: AGENTIC_DESIGN.md  ARCHITECTURE.md  CE_NN_INTEGRATION_PROPOSAL.md  CONFIG_EXPLORER.md  CONFIG_EXPLORER_EVALUATION.md  DEVELOPER_GUIDE.md  DOCKER.md  LOGGING.md  MIGRATION_PLAN.md  NeuralNav Solution Ranking.md  Planner Solution Ranking.md  Recommendation Flow.md  SIG_BENCHMARKING_ISSUE.md  TESTING.md  simplified-architecture-diagram.md
docs/archive/: ARCHITECTUREv1.md
docs/design/: arcee-trinity-vs-qwen-comparison.md  replace-accuracy-benchmarks.md
docs/superpowers/plans/: 2026-03-31-config-explorer-backend-migration.md
docs/superpowers/specs/: 2026-03-31-config-explorer-backend-migration-design.md
scripts/: convert_pgdump_to_json.py  interpolate_benchmark_scores_robust.py  kind-cluster.sh  load_benchmarks.py  regenerate_synthetic_benchmarks.py  run_api.sh  run_ui.sh  schema.sql
simulator/: Dockerfile  README.md  requirements.txt
src/config_explorer/: README.md  db.py
src/neuralnav/: capacity_planner.py  gpu_recommender.py
src/neuralnav/api/: app.py  dependencies.py
src/neuralnav/api/routes/: configuration.py  database.py  intent.py  recommendation.py  reference_data.py  specification.py
src/neuralnav/cli/: __main__.py  planner_cli.py
src/neuralnav/configuration/: generator.py
src/neuralnav/knowledge_base/: benchmark_source.py  benchmarks.py  loader.py  model_catalog.py  model_catalog_benchmarks.py  model_catalog_client.py  model_catalog_models.py  model_catalog_quality.py  slo_templates.py
src/neuralnav/llm/: ollama_client.py  prompts_experimental.py
src/neuralnav/orchestration/: workflow.py
src/neuralnav/recommendation/: config_finder.py  scorer.py
src/neuralnav/recommendation/quality/: usecase_scorer.py
src/neuralnav/shared/schemas/: __init__.py  recommendation.py
src/planner/: __init__.py  capacity_planner.py  gpu_recommender.py
src/planner/api/: app.py  dependencies.py
src/planner/api/routes/: __init__.py  capacity_planner.py  configuration.py  database.py  health.py  intent.py  recommendation.py  reference_data.py
src/planner/cli/: __main__.py  planner_cli.py
src/planner/cluster/: __init__.py  gpu_detector.py
src/planner/configuration/: generator.py  validator.py
src/planner/configuration/templates/: kserve-inferenceservice.yaml.j2
src/planner/intent_extraction/: extractor.py
src/planner/knowledge_base/: benchmarks.py  loader.py  model_catalog.py  model_catalog_client.py  model_catalog_sync.py
src/planner/llm/: ollama_client.py  prompts.py  prompts_experimental.py
src/planner/orchestration/: workflow.py
src/planner/recommendation/: analyzer.py  config_finder.py  estimator.py  scorer.py
src/planner/recommendation/quality/: usecase_scorer.py
src/planner/shared/: __init__.py
src/planner/shared/schemas/: __init__.py  intent.py  specification.py
src/planner/shared/utils/: gpu_normalizer.py
src/planner/specification/: traffic_profile.py
tests/: conftest.py  test_postgresql_integration.py  test_recommendation_workflow.py  test_yaml_generation.py
tests/fixtures/: intent_extraction_scenarios.json  test_benchmarks.json
tests/integration/: test_capacity_planner.py  test_cost_integration.py  test_model_catalog_integration.py  test_planner_cli.py  test_recommender_cost.py
tests/intent_extraction/: conftest.py  test_intent_extraction.py  test_intent_extraction_smoke.py
tests/unit/: test_benchmark_source_protocol.py  test_capacity_planner_routes.py  test_capacity_planner_service.py  test_config_finder_cluster_gpus.py  test_config_finder_quality_scorer.py  test_cost_manager.py  test_dependencies_source_selection.py  test_estimated_performance.py  test_gpu_detector.py  test_intent_extractor.py  test_model_catalog_benchmarks.py  test_model_catalog_client.py  test_model_catalog_merge.py  test_model_catalog_sync.py  test_usecase_scorer_fallback.py  test_workflow_gpu_detection.py
ui/: Capacity_Planner.py  Dockerfile  TESTING.md  api_client.py  app.py  helpers.py  main.py  requirements.txt  state.py  util.py
ui/components/: deployment.py  deployment_management.py  dialogs.py  extraction.py  recommendations.py  settings.py  slo.py
ui/examples/: gpu_recommender_example.py
ui/pages/: 1_Capacity_Planner.py  2_GPU_Recommender.py
