[project]
name = "planner"
version = "0.1.0"
description = "Confidently navigate LLM deployments from concept to production"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "fastapi>=0.136.1",
    "uvicorn[standard]==0.46.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    # LLM integration
    "ollama==0.6.1",
    # Data handling
    "pandas==3.0.2",
    # PostgreSQL
    "psycopg2-binary==2.9.12",
    # YAML generation
    "jinja2==3.1.6",
    "pyyaml==6.0.3",
    # HTTP client
    "requests==2.33.1",
    "huggingface_hub>=1.12.0",
    "transformers>=5.5.4",
    "llm-optimizer @ git+https://github.com/bentoml/llm-optimizer.git",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
ui = [
    "streamlit==1.56.0",
    "plotly>=6.3.0",
    "matplotlib>=3.10.8",
]
cluster = [
    "kubernetes>=35.0.0",
]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "ruff==0.15.12",
    "mypy>=1.20.2",
    "types-PyYAML>=6.0.12.20260408",
    "types-requests>=2.33.0.20260408",
]

[project.scripts]
planner = "planner.cli.planner_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/planner"]

[tool.ruff]
# Set the maximum line length
line-length = 100

# Target Python 3.11+
target-version = "py311"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "generated_configs",
    "logs",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules that may be too strict
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (common in FastAPI)
    "N802",   # Function name should be lowercase (some exceptions for API routes)
    "SIM108", # Use ternary operator (sometimes reduces readability)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# Ignore import sorting in __init__.py files
"__init__.py" = ["F401", "I"]

# Test files can have longer lines and unused imports
"tests/**/*.py" = ["E501", "F401"]
"test_*.py" = ["E501", "F401"]

[tool.ruff.lint.isort]
# Organize imports into sections
known-first-party = ["planner"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "database: marks tests that require a running PostgreSQL database with benchmark data",
    "integration: marks tests as integration tests (requires Ollama and database)",
    "intent_extraction: marks tests that validate LLM intent extraction (requires Ollama, run with make test-intent)",
    "unit: marks tests as unit tests (no external dependencies)",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
